created used and merchant login handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../../public/css/style.css">
+
 </head>
 <body>
 {{!-- header --}}
@@ -19,7 +20,7 @@
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <img
-            src="../../public/images/Logo.png"
+            src="../../public/images/MercuryLogo.png"
             alt="Mercury Logo"
             class="navbar-brand logo"
           />
