--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/* text so hopefully this file doesnt get randomly deleted */
 .current-server-table {
   font-size: 1.5rem;
 }
@@ -6,7 +5,7 @@
 .logo {
   max-width: 100px;
   max-height: auto;
-  border-radius: 8px;
+  border-radius: 7px;
 }
 
 .settings-item {
@@ -28,3 +27,24 @@
 #offcanvasDarkNavbarLabel {
   font-size: 2.5rem;
 }
+
+/* Merchant + User login CSS */
+.gradient-custom {
+  /* fallback for old browsers */
+  background: rgba(217, 104, 109, 1);
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(
+    to right,
+    rgba(217, 104, 109, 1),
+    rgba(249, 171, 140, 1)
+  );
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to right,
+    rgba(217, 104, 109, 1),
+    rgba(249, 171, 140, 1)
+  );
+}
+/* End of login CSS */
