--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mercury POS</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -11,21 +10,25 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <script
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
+    ></script>
+    <link rel="stylesheet" href="/css/style.css" />
 
-</head>
-<body>
-{{!-- header --}}
-{{#if needsHeader}}
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+  </head>
+  <body>
+    {{! header }}
+    {{#if needsHeader}}
+      <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <img
-            src="../../public/images/MercuryLogo.png"
+          <img
+            {{! src="../../public/images/MercuryLogo.png" }}
+            src="/images/MercuryLogo.png"
             alt="Mercury Logo"
             class="navbar-brand logo"
           />
-            {{!-- need variables. insert server name/ table name here--}}
-            <div class="d-flex">
+          {{! need variables. insert server name/ table name here}}
+          <div class="d-flex">
             <p class="current-server-table navbar-text">
               Server Name | Table Name &emsp;
             </p>
@@ -38,41 +41,48 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            </div>
+          </div>
 
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
-                aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Mercury POS</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                        aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
+          <div
+            class="offcanvas offcanvas-end text-bg-dark"
+            tabindex="-1"
+            id="offcanvasDarkNavbar"
+            aria-labelledby="offcanvasDarkNavbarLabel"
+          >
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Mercury
+                POS</h5>
+              <button
+                type="button"
+                class="btn-close btn-close-white"
+                data-bs-dismiss="offcanvas"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><p class="settings-item">Take Lunch</p></a
-                  >
+                  <a class="nav-link" href="#"><p class="settings-item">Take
+                      Lunch</p></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><p class="settings-item">Admin Settings</p></a
-                  >
+                  <a class="nav-link" href="#"><p class="settings-item">Admin
+                      Settings</p></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
-                    ><p class="settings-item">Logout</p></a
-                  >
+                  <a class="nav-link" href="#"><p
+                      class="settings-item"
+                    >Logout</p></a>
                 </li>
               </ul>
             </div>
-            </div>
+          </div>
         </div>
-    </nav>
-{{/if}}
+      </nav>
+    {{/if}}
 
     <main>
-        {{{body}}}
+      {{{body}}}
     </main>
 
     <script
@@ -90,5 +100,5 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
