Employee login done

--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -20,7 +20,7 @@
               </div>
 
               <button
-                id="submitBtn"
+                id="login"
                 class="btn btn-outline-light btn-lg px-5"
                 type="submit"
               >
@@ -33,4 +33,4 @@
     </div>
   </div>
 </section>
-<script src="./js/employeeLogin.js"></script>
+<script src="../js/employeeLogin.js"></script>
