created checkout template

--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -43,6 +43,11 @@
                                     </div>
 
                                     <div class="row">
+                                        <div class="form-outline col-md-6 mb-4">
+                                            <label class="form-label" for="city">City</label>
+                                            <input type="text" id="city" class="form-control form-control-lg" />
+                                        </div>
+
                                         <div class="col-md-6 mb-4">
                                             <p>State</p>
                                             <select class="select">
@@ -99,17 +104,19 @@
                                                 <option value="50">Wyoming</option>
                                             </select>
                                         </div>
-
-                                        <div class="form-outline col-md-6 mb-4">
-                                            <label class="form-label" for="city">City</label>
-                                            <input type="text" id="city" class="form-control form-control-lg" />
-                                        </div>
                                     </div>
 
-                                    <div class="form-outline mb-4">
+                                <div class="row">
+                                    <div class="form-outline col-md-6 mb-4">
                                         <label class="form-label" for="zipcode">Zipcode</label>
                                         <input type="text" id="zipcode" class="form-control form-control-lg" />
                                     </div>
+
+                                    <div class="form-outline col-md-6 mb-4">
+                                        <label class="form-label" for="phone">Phone Number</label>
+                                        <input type="text" id="phone" class="form-control form-control-lg" />
+                                    </div>
+                                </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="merchant_email">Email</label>
