Forgot password functionality done.  Added validation so merchants may not sign up with an email or username thats already attached to an account

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,4 @@
 <p>homepage</p>
+<button id="login">LOGIN</button>
+<button id="signup">CREATE ACCOUNT</button>
+<script src="./js/homepage.js"></script>
