--- a/views/merchantLogin.handlebars
+++ b/views/merchantLogin.handlebars
@@ -29,7 +29,7 @@
               </div>
 
               <p class="small mb-5 pb-lg-2">
-                <a class="text-white-50" href="">Forgot password?</a>
+                <a class="text-white-50" href="/forgotPassword">Forgot password?</a>
               </p>
 
               <button
