encrypted password updates, and made tableMap.js file

--- a/views/forgotPassword.handlebars
+++ b/views/forgotPassword.handlebars
@@ -29,7 +29,7 @@
             </div>
             <div id="sentMessage" class="mt-md-4 pb-5" style="display:none;">
 
-              <p>Check your email for a link to reset your password</p>
+              <p>A temporary password has been sent to your email</p>
               <a href="/login" class="text-white-50 fw-bold">Back to merchant
                 login</a>
             </div>
