--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -163,7 +163,7 @@
                       type="submit"
                       class="btn btn-warning btn-lg ms-2"
                     >
-                      Submit form
+                      Submit Form
                     </button>
                   </div>
                 </div>
