--- a/public/css/style.css
+++ b/public/css/style.css
@@ -91,3 +91,76 @@
 }
 
 /* END Admin Page CSS */
+
+/* Start of tables css*/
+header {
+  font-size: 3rem;
+  text-align: center;
+  background-color: rgb(4, 133, 165);
+  padding: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 10px;
+}
+
+.button {
+  background: #0f78ba;
+  background-image: -webkit-linear-gradient(top, #0f78ba, #0f78ba);
+  background-image: -moz-linear-gradient(top, #0f78ba, #0f78ba);
+  background-image: -ms-linear-gradient(top, #0f78ba, #0f78ba);
+  background-image: -o-linear-gradient(top, #0f78ba, #0f78ba);
+  background-image: linear-gradient(to bottom, #0f78ba, #0f78ba);
+  -webkit-border-radius: 38;
+  -moz-border-radius: 38;
+  border-radius: 38px;
+  -webkit-box-shadow: 7px 6px 7px #666666;
+  -moz-box-shadow: 7px 6px 7px #666666;
+  box-shadow: 7px 6px 7px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #0f78ba 10px;
+  text-decoration: none;
+}
+
+.button:hover {
+  background: #ed0c6a;
+  text-decoration: none;
+}
+
+.row1 {
+  margin-top: 40px;
+}
+
+.row2 {
+  margin-top: 80px;
+}
+
+.row3 {
+  margin-top: 80px;
+}
+
+#adminBtn {
+  margin-top: 5rem;
+  margin-right: 90px;
+  float: right;
+}
+
+.barHeader {
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 30px;
+  background-color: rgb(4, 133, 165);
+  padding: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
+  font-size: 3rem;
+}
+
+.barRow {
+  margin-top: 30px;
+  padding: 4px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
