--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -1,7 +1,7 @@
 <div id="receipts-page">
     <section class="receipts d-flex justify-content-center bg-dark" id="insertReceipts">
         <!-- template -->
-        <!-- <div class="card receipt">
+        {{!-- <div class="card receipt">
             <div class="card-body">
               <h5 class="card-title receipt-title">Hydrargyrum Inc.</h5>
               <div class="container">
@@ -118,8 +118,8 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div> --}}
     </section>
 </div>
 
-<script src="./js/script.js"></script>
+<script src="./js/checkout.js"></script>
