--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -1,4 +1,5 @@
-<section class="h-100 bg-dark">
+<div class="reg-page">
+<section class="h-100 bg-dark reg-form">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col">
@@ -58,6 +59,11 @@
                   </div>
 
                   <div class="row">
+                    <div class="form-outline col-md-6 mb-4">
+                      <label class="form-label" for="city">City</label>
+                      <input type="text" id="city" class="form-control form-control-lg" />
+                    </div>
+
                     <div class="col-md-6 mb-4">
                       <p>State</p>
                       <select class="select">
@@ -115,23 +121,22 @@
                       </select>
                     </div>
 
+                  </div>
+
+                  <div class="row">
                     <div class="form-outline col-md-6 mb-4">
-                      <label class="form-label" for="city">City</label>
+                      <label class="form-label" for="zipcode">Zipcode</label>
                       <input
                         type="text"
-                        id="city"
+                        id="zipcode"
                         class="form-control form-control-lg"
                       />
                     </div>
-                  </div>
 
-                  <div class="form-outline mb-4">
-                    <label class="form-label" for="zipcode">Zipcode</label>
-                    <input
-                      type="text"
-                      id="zipcode"
-                      class="form-control form-control-lg"
-                    />
+                    <div class="form-outline col-md-6 mb-4">
+                      <label class="form-label" for="phone">Phone Number</label>
+                      <input type="text" id="phone" class="form-control form-control-lg" />
+                    </div>
                   </div>
 
                   <div class="form-outline mb-4">
@@ -175,4 +180,5 @@
     </div>
   </div>
 </section>
+</div>
 <script src="/js/merchantSignUp.js"></script>
