--- a/views/tableMap.handlebars
+++ b/views/tableMap.handlebars
@@ -1,5 +1,5 @@
 <header>Tables</header>
-<div class="container">
+<div id="tables" class="container">
   <div class="row1 d-flex justify-content-evenly">
     <button id="1" class="button">Table 1</button>
     <button id="2" class="button">Table 2</button>
