--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -1,7 +1,11 @@
 <div id="receipts-page">
-    <section class="receipts d-flex justify-content-center bg-dark" id="insertReceipts">
-        <!-- template -->
-        <!-- <div class="card receipt">
+  <section
+    class="receipts d-flex justify-content-center bg-dark"
+    id="insertReceipts"
+  >
+    <h1>HELLO</h1>
+    <!-- template -->
+    <!-- <div class="card receipt">
             <div class="card-body">
               <h5 class="card-title receipt-title">Hydrargyrum Inc.</h5>
               <div class="container">
@@ -119,7 +123,7 @@
               </div>
             </div>
           </div> -->
-    </section>
+  </section>
 </div>
 
 <script src="./js/script.js"></script>
