--- a/views/merchantLogin.handlebars
+++ b/views/merchantLogin.handlebars
@@ -1,4 +1,5 @@
-<section class="vh-100 gradient-custom">
+<div id="mLogin-page">
+  <section class="gradient-custom mLogin-bg">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -52,6 +53,7 @@
       </div>
     </div>
   </div>
-</section>
+  </section>
+</div>
 <script src="./js/merchantLogin.js">
 </script>
