--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -1,4 +1,78 @@
+body{
+    margin: 0px;
+}
+
+.container {
+    margin: 40px;
+    /* border: 4px solid; */
+}
 .left-row {
-    margin-top: 40px;
-    border: 4px solid;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 2px outset;
+
+}
+/* .right-row-btns {
+    margin-top: 10px;
+    
+} */
+
+p {
+ 
+    text-align: center;
+}
+
+img {
+    width: 100px;
+    height: 100px ;
+}
+
+#menu-items {
+    border: outset;
+}
+
+.menu-row {
+    border: 2px outset;
+}
+
+.table-map {
+    margin-top: 10px ;
+width: 80%;
+margin-left: 30px;
+}
+
+.tab-name {
+    margin-top: 30px;
+    margin-left: 30px;
+    width: 80%;
+    align-items: center;
+}
+
+.server-name {
+    margin-top: 30px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.nqp-table {
+    margin-top: 30px;
+    width: 100%;
+}
+
+.send-kitchen {
+    margin-top: 30px;
+    width: 80%;
+    margin-left: 30px;
+}
+
+.sales-tax {
+    margin-top: 30px;
+    width: 100%;
+}
+
+.checkout {
+    margin-top: 30px;
+    width: 80%;
+    margin-left: 30px;
+    margin-bottom: 20px;
 }
