--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,7 +109,7 @@ html {
 
 /* START Admin Page CSS*/
 .hide {
-  display: none;
+  display: none !important;
 }
 
 .select {
@@ -118,7 +118,7 @@ html {
 
 .main {
   background-color: #6c757d;
-  height: 100vh;
+  height: 150vh;
 }
 
 #header_nav {
@@ -131,6 +131,9 @@ html {
 }
 
 #sidebarDisplay {
+  overflow-y: scroll;
+  height: 500px;
+  width: 700px;
   background-color: lightgray;
   border: 2px solid whitesmoke;
 }
@@ -148,6 +151,7 @@ html {
 }
 
 .action-btn {
+  display: block;
   height: 100px;
   width: 200px;
   line-height: 85px;
@@ -159,6 +163,7 @@ html {
 .employeeList {
   width: 100%;
   margin: 5px 0 5px 0;
+  text-align: start;
 }
 /* END Admin Page CSS */
 
