--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -3,7 +3,7 @@
         {{!-- <!-- template --> --}}
         {{!-- <div class="card receipt">
             <div class="card-body">
-              <h5 class="card-title receipt-title">Hydrargyrum Inc.</h5>
+              <h5 class="card-title receipt-title">{{Hydrargyrum Inc.}}</h5>
               <div class="container">
                 <div class="row receipt-header">
                   <div class="col-4 receipt-header-left">
