added + and - to the landing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -250,7 +250,7 @@ header {
 .left-row {
   margin-top: 10px;
 
-  background-color: #a76449;
+  background-color: #9b9da5;
 }
 
 .right-row-btns {
@@ -330,8 +330,16 @@ img {
 
 .nqp-table {
   margin-top: 30px;
-  width: 100%;
-  margin-left: 35px;
+  width: 90%;
+  margin-left: 45px;
+}
+
+.btn-subtract:hover {
+color: red;
+}
+
+.btn-add:hover {
+  color: green;
 }
 
 .send-kitchen {
@@ -358,3 +366,4 @@ img {
 }
 
 /* END OF LANDING PAGE CSS */
+
