--- a/public/css/style.css
+++ b/public/css/style.css
@@ -40,6 +40,11 @@ html {
   display: flex;
   justify-content: space-between;
 }
+
+/* .test {
+  display: flex;
+  justify-content: space-between;
+} */
 /* end of Checkout CSS */
 
 /* signUp CSS */
@@ -255,7 +260,7 @@ header {
   background-color: #bec5bf;
 }
 
-.container {
+.landingPageContainer {
   margin: 40px;
   /* border: 4px solid; */
 }
