--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -1,9 +1,9 @@
 <div id="receipts-page">
     <section class="receipts d-flex justify-content-center bg-dark" id="insertReceipts">
         {{!-- <!-- template --> --}}
-        {{!-- <div class="card receipt">
+        <div class="card receipt">
             <div class="card-body">
-              <h5 class="card-title receipt-title">{{Hydrargyrum Inc.}}</h5>
+              <h5 class="card-title receipt-title">Hydrargyrum Inc.</h5>
               <div class="container">
                 <div class="row receipt-header">
                   <div class="col-4 receipt-header-left">
@@ -96,12 +96,12 @@
 
                 <div class="row justify-content-center">
                   <div class="pay-button-container">
-                    <button
+                    {{!-- <button
                       type="button"
                       class="btn btn-success btn-lg split-button"
                     >
                       Split Bill
-                    </button>
+                    </button> --}}
                     <button
                       type="button"
                       class="btn btn-success btn-lg discount-button"
@@ -118,8 +118,8 @@
                 </div>
               </div>
             </div>
-          </div> --}}
+          </div>
   </section>
 </div>
 
-<script src="/js/checkout.js"></script>
+{{!-- <script src="/js/checkout.js"></script> --}}
