--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,6 @@
       <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
           <img
-            {{! src="../../public/images/MercuryLogo.png" }}
             src="/images/MercuryLogo.png"
             alt="Mercury Logo"
             class="navbar-brand logo"
@@ -66,10 +65,13 @@
                   <a class="nav-link" href="#"><p class="settings-item">Take
                       Lunch</p></a>
                 </li>
+                {{!-- check to see if user isAdmin = true --}}
+                {{#if isAdmin}}
                 <li class="nav-item">
                   <a class="nav-link" href="#"><p class="settings-item">Admin
                       Settings</p></a>
                 </li>
+                {{/if}}
                 <li class="nav-item">
                   <a class="nav-link" href="#"><p
                       class="settings-item"
