added fix to the landing page, added favicon

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,6 +107,7 @@ html {
 }
 /* End of login CSS */
 
+/* --------------------------------------------------------------- */
 /* START Admin Page CSS*/
 .hide {
   display: none !important;
@@ -162,6 +163,8 @@ html {
   text-align: start;
 }
 /* END Admin Page CSS */
+
+/* --------------------------------------------------------------- */
 
 /* Start of tables css*/
 header {
@@ -240,18 +243,16 @@ header {
 
 .landing-page {
   margin: 0px;
-  background-color: #bec5bf;
+  background-color: #2f2c2c;
 }
 
 .container {
   margin: 40px;
-  /* border: 4px solid; */
 }
 
 .left-row {
   margin-top: 10px;
-
-  background-color: #9b9da5;
+  background-color:#e87b72
 }
 
 .right-row-btns {
@@ -263,8 +264,15 @@ header {
 .food,
 .merch {
   width: 250px;
-  height: 130px;
+  height: 160px;
   margin-left: 16px;
+  background-color:#e87b72;
+  font-size: 2rem;
+}
+.drinks:hover,
+.food:hover,
+.merch:hover {
+background-color: #000000;
 }
 
 .item-1,
@@ -291,10 +299,11 @@ header {
 }
 
 .images {
-  width: 180px;
-  height: 110px;
+  width: 185px;
+  height: 140px;
   -webkit-transition: all 0.7s ease;
   transition: all 0.7s ease;
+  border-radius: 10px;
 }
 
 .images:hover {
@@ -303,10 +312,11 @@ header {
 }
 
 #menu-items {
-  border: outset;
-  background-color: #149d78;
+  border: outset #e87b72;
+  background-color:#e39c7f;
   margin-top: 10px;
   text-align: center;
+  border-radius: 10px;
 }
 
 .menu-row {
@@ -318,6 +328,10 @@ header {
   width: 80%;
   height: 50px;
   margin-left: 40px;
+  background-color: #000000;
+  border-color: #e39c7f;
+
+  
 }
 
 .tab-name {
@@ -326,6 +340,7 @@ header {
   width: 80%;
   height: 50px;
   align-items: center;
+  background-color: #000000;
 }
 
 .server-name {
@@ -354,6 +369,7 @@ header {
   width: 80%;
   height: 50px;
   margin-left: 40px;
+  background-color: #000000;
 }
 
 .sales-tax {
@@ -374,13 +390,15 @@ header {
 
 /* END OF LANDING PAGE CSS */
 
+/* --------------------------------------------------------------- */
+
 /* START OF HOMEPAGE CSS  */
 .homepage-body {
   background-color: black;
 }
 
 #main-logo1 {
-  /* margin-top: 20px; */
+  margin-top: 45px;
   width: 100%;
   height: 40%;
 -webkit-transition: all 0.5s ease;
@@ -393,7 +411,7 @@ filter: saturate(2);
 }
 
 #lower-btns {
-margin-bottom: 50px;
+margin-top: 25px;
   text-align: center;
 }
 
@@ -416,3 +434,5 @@ margin-bottom: 50px;
 }
 
 /* END OF HOMEPAGE CSS */
+
+/* --------------------------------------------------------------- */
